# mozilla-linux-pkg-manager

./: .pre-commit-config.yaml  .taskcluster.yml  Dockerfile  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst
src/mozilla_deb_pkg_manager/: __init__.py  cli.py
src/mozilla_gcp_ar_pkg_manager/: __init__.py  cli.py
src/mozilla_linux_pkg_manager/: cli.py
taskcluster/: config.yml  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/docker/pkg-manager/: Dockerfile
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/codecov/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/fetch/: kind.yml
taskcluster/kinds/test/: kind.yml
taskcluster/scripts/: codecov-upload.py
test/: test_mozilla-deb-pkg-manager.py  test_mozilla_deb_pkg_manager.py
