[project]
name = "mozilla-linux-pkg-manager"
version = "1.0.0"
description = "`mozilla-releng/mozilla-linux-pkg-manager` is a Python tool for managing Mozilla `.deb` packages."
authors = [
  {name = "Mozilla Release Engineering", email = "release@mozilla.com"}
]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "pyyaml",
    "mozilla-version",
    "google-cloud-artifact-registry",
]

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "tox",
    "tox-uv",
]

[project.scripts]
mozilla-linux-pkg-manager = "mozilla_linux_pkg_manager.cli:main"


[tool.black]
line-length = 88

[tool.pytest.ini_options]
xfail_strict = true
asyncio_mode = "auto"

[tool.coverage.run]
parallel = true
branch = true
source = ["src/mozilla_linux_pkg_manager/"]

[tool.ruff]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "PLC", "PLE",   # pylint
    "UP",           # pyupgrade
]
ignore = [
    "E501",  # let black handle line-length
    "UP007",
]
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["mozilla_linux_pkg_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mozilla_linux_pkg_manager"]
